--- a/Documentation/latex/annotated.tex
+++ b/Documentation/latex/annotated.tex
@@ -1,6 +1,7 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\-:\begin{DoxyCompactList}
 \item\contentsline{section}{\hyperlink{classClassDetails}{Class\-Details} }{\pageref{classClassDetails}}{}
+\item\contentsline{section}{\hyperlink{classDetails}{Details} }{\pageref{classDetails}}{}
 \item\contentsline{section}{\hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} }{\pageref{classHTMLTags}}{}
 \item\contentsline{section}{\hyperlink{classInputFieldNames}{Input\-Field\-Names} }{\pageref{classInputFieldNames}}{}
 \item\contentsline{section}{\hyperlink{classMySQL}{My\-S\-Q\-L} }{\pageref{classMySQL}}{}
