--- a/Documentation/latex/classClassDetails.tex
+++ b/Documentation/latex/classClassDetails.tex
@@ -8,7 +8,7 @@
 Inheritance diagram for Class\-Details\-:\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=3.000000cm]{classClassDetails}
+\includegraphics[height=4.000000cm]{classClassDetails}
 \end{center}
 \end{figure}
 \subsection*{Public Member Functions}
@@ -20,10 +20,12 @@ void \hyperlink{classClassDetails_a2a63d68979d3ac96d35e6534414799ef}{Total\-Clas
 \begin{DoxyCompactList}\small\item\em Get total classes. \end{DoxyCompactList}\item 
 void \hyperlink{classClassDetails_a7eed324cd736c68fe4b420de481e3b17}{Class\-Info} ()
 \item 
-void \hyperlink{classClassDetails_a4a0b14f8c5ca7f845d64854a0d81e1ec}{Header} ()
-\begin{DoxyCompactList}\small\item\em Header of page. \end{DoxyCompactList}\item 
-void \hyperlink{classClassDetails_a8e80a53e9b6597171c6d8b1976dc33f9}{Footer} ()
-\begin{DoxyCompactList}\small\item\em Footer of page. \end{DoxyCompactList}\item 
+void \hyperlink{classDetails_a8e68d891bafeb807bdc9c6a4178c3fde}{Header} (string title\-Name)
+\item 
+void \hyperlink{classPageLayout_a7726061f0653245f644a05807fa92472}{Header} ()
+\item 
+void \hyperlink{classDetails_a1247e8124e16032be1aa8eca9fd2832a}{Footer} ()
+\item 
 void \hyperlink{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{Menu} ()
 \item 
 void \hyperlink{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}{Logo} (string logo\-Name)
@@ -80,33 +82,36 @@ void \hyperlink{classHTMLTags_ab6dbb027d808e7b708a4ece7e911ceee}{Button} (string
 \hypertarget{classClassDetails_a9bea81a0e09229c7060a592af6321b26}{int {\bfseries total\-Classes}}\label{classClassDetails_a9bea81a0e09229c7060a592af6321b26}
 
 \item 
-string {\bfseries class\-Name} \mbox{[}max\-Classes\mbox{]}
-\item 
-string {\bfseries subject\-Name} \mbox{[}max\-Classes\mbox{]}
-\item 
-string {\bfseries subject\-Code} \mbox{[}max\-Classes\mbox{]}
-\item 
-string {\bfseries table\-Heading} \mbox{[}4\mbox{]}
-\item 
-\hypertarget{classClassDetails_a53e447a55d35c02dcb02c6553380697e}{\hyperlink{classInputFieldNames}{Input\-Field\-Names} {\bfseries field\-Name}}\label{classClassDetails_a53e447a55d35c02dcb02c6553380697e}
+\hypertarget{classClassDetails_a493e8ed1abcf67813875cff05c2a4543}{string {\bfseries class\-Name} \mbox{[}max\-Classes\mbox{]}}\label{classClassDetails_a493e8ed1abcf67813875cff05c2a4543}
 
 \item 
-\hypertarget{classClassDetails_a76dd2ba9e99ef8c24083a4b770003b07}{\hyperlink{classReadInputFields}{Read\-Input\-Fields} {\bfseries read\-Field}}\label{classClassDetails_a76dd2ba9e99ef8c24083a4b770003b07}
+\hypertarget{classClassDetails_aabb81b0797930602510f4531c875c6d1}{string {\bfseries subject\-Code} \mbox{[}max\-Classes\mbox{]}}\label{classClassDetails_aabb81b0797930602510f4531c875c6d1}
 
 \item 
-\hypertarget{classClassDetails_ab9f71f35c7f01ccbc4bfcd7e9f5ba28b}{int {\bfseries i}}\label{classClassDetails_ab9f71f35c7f01ccbc4bfcd7e9f5ba28b}
+\hypertarget{classClassDetails_a24cb6f1543b6a13e6308594903f0d7ab}{string {\bfseries subject\-Name} \mbox{[}max\-Classes\mbox{]}}\label{classClassDetails_a24cb6f1543b6a13e6308594903f0d7ab}
 
 \item 
-\hypertarget{classClassDetails_a57e44148f58db012a1cea587a09e2a4c}{int {\bfseries j}}\label{classClassDetails_a57e44148f58db012a1cea587a09e2a4c}
+\hypertarget{classClassDetails_a99529a2a9cdf81d419cb9930082cd0a2}{string {\bfseries table\-Heading} \mbox{[}max\-Classes\mbox{]}}\label{classClassDetails_a99529a2a9cdf81d419cb9930082cd0a2}
 
 \item 
-\hypertarget{classClassDetails_a1f87d306010f98019f49d965e15e8104}{int {\bfseries k}}\label{classClassDetails_a1f87d306010f98019f49d965e15e8104}
+\hyperlink{classInputFieldNames}{Input\-Field\-Names} \hyperlink{classDetails_ae3bcb91c433e3c4b1a6c535670d23594}{field\-Name}
+\item 
+\hypertarget{classDetails_ae820748ae6cd2c19727e12530a539ab7}{\hyperlink{classReadInputFields}{Read\-Input\-Fields} {\bfseries read\-Field}}\label{classDetails_ae820748ae6cd2c19727e12530a539ab7}
 
 \item 
-\hypertarget{classClassDetails_a0d3938ba9270a39f0579bd8fbe0cae0b}{stringstream {\bfseries ss}}\label{classClassDetails_a0d3938ba9270a39f0579bd8fbe0cae0b}
+\hypertarget{classDetails_ab0654d49cea02fe183a9f5c75fc24147}{int {\bfseries i}}\label{classDetails_ab0654d49cea02fe183a9f5c75fc24147}
 
 \item 
-\hypertarget{classClassDetails_ade1a7d32883434c1a994c7c04a275d3d}{string {\bfseries temp}}\label{classClassDetails_ade1a7d32883434c1a994c7c04a275d3d}
+\hypertarget{classDetails_a21b3ebbff98d5f81160ab906192bc086}{int {\bfseries j}}\label{classDetails_a21b3ebbff98d5f81160ab906192bc086}
+
+\item 
+\hypertarget{classDetails_a3de86a1bca9eec7d34351423d399c695}{int {\bfseries k}}\label{classDetails_a3de86a1bca9eec7d34351423d399c695}
+
+\item 
+\hypertarget{classDetails_a0ca8dcd9715950526d69727b1ba2b553}{stringstream {\bfseries ss}}\label{classDetails_a0ca8dcd9715950526d69727b1ba2b553}
+
+\item 
+\hypertarget{classDetails_a59491407c5b176454b9c0fc9b7abc6b8}{string {\bfseries temp}}\label{classDetails_a59491407c5b176454b9c0fc9b7abc6b8}
 
 \item 
 string \hyperlink{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}{project\-Name}
@@ -164,7 +169,7 @@ string \hyperlink{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{start\-H1}
 \subsection{Detailed Description}
 =================================================================== Class\-: \hyperlink{classClassDetails}{Class\-Details} Description\-: This class is used to get details of class from \subsection*{user. Like class name, total classes, subject details etc.}
 
-Definition at line 43 of file classdetails.\-h.
+Definition at line 41 of file classdetails.\-h.
 
 
 
@@ -262,7 +267,7 @@ Get class details like class name, subject name and subject code
 
  Class\-: \hyperlink{classClassDetails}{Class\-Details} Method\-: \hyperlink{classClassDetails}{Class\-Details} \-:\-: \hyperlink{classClassDetails_a7eed324cd736c68fe4b420de481e3b17}{Class\-Info()} Description\-: Get class name, subject code and subject name from \subsubsection*{user.}
 
-Definition at line 148 of file classdetails.\-cc.
+Definition at line 136 of file classdetails.\-cc.
 
 \hypertarget{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}{\index{Class\-Details@{Class\-Details}!C\-S\-S@{C\-S\-S}}
 \index{C\-S\-S@{C\-S\-S}!ClassDetails@{Class\-Details}}
@@ -316,26 +321,22 @@ Start Div Section.
 
 Definition at line 194 of file htmltags.\-cc.
 
-\hypertarget{classClassDetails_a8e80a53e9b6597171c6d8b1976dc33f9}{\index{Class\-Details@{Class\-Details}!Footer@{Footer}}
+\hypertarget{classDetails_a1247e8124e16032be1aa8eca9fd2832a}{\index{Class\-Details@{Class\-Details}!Footer@{Footer}}
 \index{Footer@{Footer}!ClassDetails@{Class\-Details}}
-\subsubsection[{Footer}]{\setlength{\rightskip}{0pt plus 5cm}void Class\-Details\-::\-Footer (
+\subsubsection[{Footer}]{\setlength{\rightskip}{0pt plus 5cm}void Details\-::\-Footer (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
-)}}\label{classClassDetails_a8e80a53e9b6597171c6d8b1976dc33f9}
+)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classDetails_a1247e8124e16032be1aa8eca9fd2832a}
 
 
-Footer of page. 
-
-
-
- Class\-: \hyperlink{classClassDetails}{Class\-Details} Method\-: \hyperlink{classClassDetails}{Class\-Details} \-:\-: \hyperlink{classClassDetails_a8e80a53e9b6597171c6d8b1976dc33f9}{Footer()} \subsubsection*{Description\-: Footer of page}
+ Class\-: \hyperlink{classDetails}{Details} Method\-: \hyperlink{classDetails}{Details} \-:\-: \hyperlink{classDetails_a1247e8124e16032be1aa8eca9fd2832a}{Footer()} \subsubsection*{Description\-: Common for all pages(end body, html)}
 
 Reimplemented from \hyperlink{classPageLayout_a68aa868a8868b12964f161838b5f814c}{Page\-Layout}.
 
 
 
-Definition at line 89 of file classdetails.\-cc.
+Definition at line 68 of file details.\-cc.
 
 \hypertarget{classHTMLTags_ab57baef28db9590ce59d0e2f403a210f}{\index{Class\-Details@{Class\-Details}!Form\-End@{Form\-End}}
 \index{Form\-End@{Form\-End}!ClassDetails@{Class\-Details}}
@@ -407,26 +408,33 @@ Display $<$/\-H\-E\-A\-D$>$
 
 Definition at line 112 of file htmltags.\-cc.
 
-\hypertarget{classClassDetails_a4a0b14f8c5ca7f845d64854a0d81e1ec}{\index{Class\-Details@{Class\-Details}!Header@{Header}}
+\hypertarget{classPageLayout_a7726061f0653245f644a05807fa92472}{\index{Class\-Details@{Class\-Details}!Header@{Header}}
 \index{Header@{Header}!ClassDetails@{Class\-Details}}
-\subsubsection[{Header}]{\setlength{\rightskip}{0pt plus 5cm}void Class\-Details\-::\-Header (
+\subsubsection[{Header}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Header (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
-)}}\label{classClassDetails_a4a0b14f8c5ca7f845d64854a0d81e1ec}
-
-
-Header of page. 
-
-
-
- Class\-: \hyperlink{classClassDetails}{Class\-Details} Method\-: \hyperlink{classClassDetails}{Class\-Details} \-:\-: \hyperlink{classClassDetails_a4a0b14f8c5ca7f845d64854a0d81e1ec}{Header()} \subsubsection*{Description\-: Includes menu, logo, header of page}
-
-Reimplemented from \hyperlink{classPageLayout_a7726061f0653245f644a05807fa92472}{Page\-Layout}.
+)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classPageLayout_a7726061f0653245f644a05807fa92472}
+Header Section of Page
 
 
 
-Definition at line 72 of file classdetails.\-cc.
+ Class\-: \hyperlink{classPageLayout}{Page\-Layout} Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_a7726061f0653245f644a05807fa92472}{Header()} \subsubsection*{Description\-: Call Menu Function}
+
+Definition at line 88 of file pagelayout.\-cc.
+
+\hypertarget{classDetails_a8e68d891bafeb807bdc9c6a4178c3fde}{\index{Class\-Details@{Class\-Details}!Header@{Header}}
+\index{Header@{Header}!ClassDetails@{Class\-Details}}
+\subsubsection[{Header}]{\setlength{\rightskip}{0pt plus 5cm}void Details\-::\-Header (
+\begin{DoxyParamCaption}
+\item[{string}]{title\-Name}
+\end{DoxyParamCaption}
+)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classDetails_a8e68d891bafeb807bdc9c6a4178c3fde}
+
+
+ Class\-: \hyperlink{classDetails}{Details} Method\-: \hyperlink{classDetails}{Details} \-:\-: \hyperlink{classDetails_a8e68d891bafeb807bdc9c6a4178c3fde}{Header(string title\-Name)} \subsubsection*{Description\-: common header for all pages(start html, head, body)}
+
+Definition at line 50 of file details.\-cc.
 
 \hypertarget{classHTMLTags_af2b01cc08884af52e0b291d07035062e}{\index{Class\-Details@{Class\-Details}!Head\-Start@{Head\-Start}}
 \index{Head\-Start@{Head\-Start}!ClassDetails@{Class\-Details}}
@@ -695,26 +703,17 @@ Get total classes.
 
  Class\-: \hyperlink{classClassDetails}{Class\-Details} Method\-: \hyperlink{classClassDetails}{Class\-Details} \-:\-: \hyperlink{classClassDetails_a2a63d68979d3ac96d35e6534414799ef}{Total\-Classes()} \subsubsection*{Description\-: Get Total classes from user}
 
-Definition at line 103 of file classdetails.\-cc.
+Definition at line 91 of file classdetails.\-cc.
 
 
 
 \subsection{Member Data Documentation}
-\hypertarget{classClassDetails_a493e8ed1abcf67813875cff05c2a4543}{\index{Class\-Details@{Class\-Details}!class\-Name@{class\-Name}}
-\index{class\-Name@{class\-Name}!ClassDetails@{Class\-Details}}
-\subsubsection[{class\-Name}]{\setlength{\rightskip}{0pt plus 5cm}string Class\-Details\-::class\-Name\mbox{[}max\-Classes\mbox{]}\hspace{0.3cm}{\ttfamily [protected]}}}\label{classClassDetails_a493e8ed1abcf67813875cff05c2a4543}
-{\bfseries Initial value\-:}
-\begin{DoxyCode}
- \{\textcolor{stringliteral}{"Info. Tech."}, \textcolor{stringliteral}{"10th"}, 
-                                        \textcolor{stringliteral}{"ECE"}, \textcolor{stringliteral}{"Mech. Engg."}, 
-                                        \textcolor{stringliteral}{"Production Engg."}, 
-                                        \textcolor{stringliteral}{"Electrical Engg."}, \textcolor{stringliteral}{"IT"},             
-                                        \textcolor{stringliteral}{"Electronics Engg."}, 
-                                        \textcolor{stringliteral}{"Comp. Sci. Engg."}, \textcolor{stringliteral}{"MBA"}\}
-\end{DoxyCode}
+\hypertarget{classDetails_ae3bcb91c433e3c4b1a6c535670d23594}{\index{Class\-Details@{Class\-Details}!field\-Name@{field\-Name}}
+\index{field\-Name@{field\-Name}!ClassDetails@{Class\-Details}}
+\subsubsection[{field\-Name}]{\setlength{\rightskip}{0pt plus 5cm}{\bf Input\-Field\-Names} Details\-::field\-Name\hspace{0.3cm}{\ttfamily [protected]}, {\ttfamily [inherited]}}}\label{classDetails_ae3bcb91c433e3c4b1a6c535670d23594}
+Objects of \hyperlink{classInputFieldNames}{Input\-Field\-Names} and Read\-Fields\-Value class 
 
-
-Definition at line 54 of file classdetails.\-h.
+Definition at line 44 of file details.\-h.
 
 \hypertarget{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}{\index{Class\-Details@{Class\-Details}!project\-Name@{project\-Name}}
 \index{project\-Name@{project\-Name}!ClassDetails@{Class\-Details}}
@@ -736,50 +735,7 @@ H\-T\-M\-L Tag Variables for
 
 
 
-Definition at line 38 of file htmltags.\-h.
-
-\hypertarget{classClassDetails_aabb81b0797930602510f4531c875c6d1}{\index{Class\-Details@{Class\-Details}!subject\-Code@{subject\-Code}}
-\index{subject\-Code@{subject\-Code}!ClassDetails@{Class\-Details}}
-\subsubsection[{subject\-Code}]{\setlength{\rightskip}{0pt plus 5cm}string Class\-Details\-::subject\-Code\mbox{[}max\-Classes\mbox{]}\hspace{0.3cm}{\ttfamily [protected]}}}\label{classClassDetails_aabb81b0797930602510f4531c875c6d1}
-{\bfseries Initial value\-:}
-\begin{DoxyCode}
- \{\textcolor{stringliteral}{"IT-101, IT-102"}, 
-                                          \textcolor{stringliteral}{"ME-10,CE-252"}, \textcolor{stringliteral}{"EVS, ED-10"}, 
-                                          \textcolor{stringliteral}{"ED-10, IT-102"}, \textcolor{stringliteral}{"IT-102"}, 
-                                          \textcolor{stringliteral}{"IT-203"}, \textcolor{stringliteral}{"CE-120"}, \textcolor{stringliteral}{"ME-140"}, 
-                                          \textcolor{stringliteral}{"EE-109, 1234S, IT-203"},    
-                                          \textcolor{stringliteral}{"ME-101,ME-501,IT-101"} \}
-\end{DoxyCode}
-
-
-Definition at line 67 of file classdetails.\-h.
-
-\hypertarget{classClassDetails_a24cb6f1543b6a13e6308594903f0d7ab}{\index{Class\-Details@{Class\-Details}!subject\-Name@{subject\-Name}}
-\index{subject\-Name@{subject\-Name}!ClassDetails@{Class\-Details}}
-\subsubsection[{subject\-Name}]{\setlength{\rightskip}{0pt plus 5cm}string Class\-Details\-::subject\-Name\mbox{[}max\-Classes\mbox{]}\hspace{0.3cm}{\ttfamily [protected]}}}\label{classClassDetails_a24cb6f1543b6a13e6308594903f0d7ab}
-{\bfseries Initial value\-:}
-\begin{DoxyCode}
- \{\textcolor{stringliteral}{"DBMS, SAD"}, \textcolor{stringliteral}{"Maths,Physics"},
-                                          \textcolor{stringliteral}{"OS, EVS"}, \textcolor{stringliteral}{"Java, C++"}, \textcolor{stringliteral}{"EVS"},
-                                          \textcolor{stringliteral}{"Chem."}, \textcolor{stringliteral}{"ED"}, \textcolor{stringliteral}{"Maths"},       
-                                          \textcolor{stringliteral}{"Maths,DBMS, Physics"},
-                                          \textcolor{stringliteral}{"Multimedia, Dot Net, ED"}\}
-\end{DoxyCode}
-
-
-Definition at line 61 of file classdetails.\-h.
-
-\hypertarget{classClassDetails_a0f5d73651bbf0ea0919cb6a2993c2afc}{\index{Class\-Details@{Class\-Details}!table\-Heading@{table\-Heading}}
-\index{table\-Heading@{table\-Heading}!ClassDetails@{Class\-Details}}
-\subsubsection[{table\-Heading}]{\setlength{\rightskip}{0pt plus 5cm}string Class\-Details\-::table\-Heading\mbox{[}4\mbox{]}\hspace{0.3cm}{\ttfamily [protected]}}}\label{classClassDetails_a0f5d73651bbf0ea0919cb6a2993c2afc}
-{\bfseries Initial value\-:}
-\begin{DoxyCode}
- \{\textcolor{stringliteral}{"Class Name"}, \textcolor{stringliteral}{"Total Subjects"}, 
-                                  \textcolor{stringliteral}{"Subject Name"}, \textcolor{stringliteral}{"Subject Code"}\}
-\end{DoxyCode}
-
-
-Definition at line 74 of file classdetails.\-h.
+Definition at line 36 of file htmltags.\-h.
 
 
 
