--- a/Documentation/latex/classDetails.tex
+++ b/Documentation/latex/classDetails.tex
@@ -1,29 +1,26 @@
-\hypertarget{classRollNoDetails}{\section{Roll\-No\-Details Class Reference}
-\label{classRollNoDetails}\index{Roll\-No\-Details@{Roll\-No\-Details}}
+\hypertarget{classDetails}{\section{Details Class Reference}
+\label{classDetails}\index{Details@{Details}}
 }
 
 
-{\ttfamily \#include $<$rollnodetails.\-h$>$}
+{\ttfamily \#include $<$details.\-h$>$}
 
-Inheritance diagram for Roll\-No\-Details\-:\begin{figure}[H]
+Inheritance diagram for Details\-:\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=3.000000cm]{classRollNoDetails}
+\includegraphics[height=4.000000cm]{classDetails}
 \end{center}
 \end{figure}
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\hyperlink{classRollNoDetails_aef927fa87d8ab659f6a241290936980c}{Roll\-No\-Details} ()
-\begin{DoxyCompactList}\small\item\em Constructor. \end{DoxyCompactList}\item 
-\hyperlink{classRollNoDetails_a218c683c86ee19788b868a08af6e210f}{Read\-Class\-Details} ()
-\begin{DoxyCompactList}\small\item\em Reading class details from previous page using cgicc. \end{DoxyCompactList}\item 
-\hypertarget{classRollNoDetails_ade931d9c426fbd3fd5d8db72b3a55289}{{\bfseries Write\-Class\-Details} ()}\label{classRollNoDetails_ade931d9c426fbd3fd5d8db72b3a55289}
-
+\hyperlink{classDetails_a12ecc831d85f2e09538ff6ebf639277d}{Details} ()
+\item 
+void \hyperlink{classDetails_a8e68d891bafeb807bdc9c6a4178c3fde}{Header} (string title\-Name)
+\item 
+void \hyperlink{classDetails_a1247e8124e16032be1aa8eca9fd2832a}{Footer} ()
 \item 
 void \hyperlink{classPageLayout_a7726061f0653245f644a05807fa92472}{Header} ()
-\item 
-void \hyperlink{classPageLayout_a68aa868a8868b12964f161838b5f814c}{Footer} ()
 \item 
 void \hyperlink{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{Menu} ()
 \item 
@@ -78,24 +75,24 @@ void \hyperlink{classHTMLTags_ab6dbb027d808e7b708a4ece7e911ceee}{Button} (string
 \subsection*{Protected Attributes}
 \begin{DoxyCompactItemize}
 \item 
-string \hyperlink{classRollNoDetails_a2126e353865b8e215513fe17785ef230}{prefix} \mbox{[}M\-I\-N\-\_\-\-S\-I\-Z\-E\mbox{]}
-\begin{DoxyCompactList}\small\item\em for storing values of class details \end{DoxyCompactList}\item 
-\hypertarget{classRollNoDetails_a441e0e8f352b04e2eb104d8a69d939c2}{string {\bfseries start\-Roll\-No} \mbox{[}M\-I\-N\-\_\-\-S\-I\-Z\-E\mbox{]}}\label{classRollNoDetails_a441e0e8f352b04e2eb104d8a69d939c2}
+\hyperlink{classInputFieldNames}{Input\-Field\-Names} \hyperlink{classDetails_ae3bcb91c433e3c4b1a6c535670d23594}{field\-Name}
+\item 
+\hypertarget{classDetails_ae820748ae6cd2c19727e12530a539ab7}{\hyperlink{classReadInputFields}{Read\-Input\-Fields} {\bfseries read\-Field}}\label{classDetails_ae820748ae6cd2c19727e12530a539ab7}
 
 \item 
-\hypertarget{classRollNoDetails_a8231b6d71b73f825f29a84e290d6736b}{string {\bfseries end\-Roll\-No} \mbox{[}M\-I\-N\-\_\-\-S\-I\-Z\-E\mbox{]}}\label{classRollNoDetails_a8231b6d71b73f825f29a84e290d6736b}
+\hypertarget{classDetails_ab0654d49cea02fe183a9f5c75fc24147}{int {\bfseries i}}\label{classDetails_ab0654d49cea02fe183a9f5c75fc24147}
 
 \item 
-\hypertarget{classRollNoDetails_a1280f14b2160fb396a675bc4ba5fb85d}{string {\bfseries not\-Included} \mbox{[}M\-I\-N\-\_\-\-S\-I\-Z\-E\mbox{]}}\label{classRollNoDetails_a1280f14b2160fb396a675bc4ba5fb85d}
+\hypertarget{classDetails_a21b3ebbff98d5f81160ab906192bc086}{int {\bfseries j}}\label{classDetails_a21b3ebbff98d5f81160ab906192bc086}
 
 \item 
-\hypertarget{classRollNoDetails_aa2d166949084d8f3ba6d8ab70f49282a}{int {\bfseries total\-Classes}}\label{classRollNoDetails_aa2d166949084d8f3ba6d8ab70f49282a}
+\hypertarget{classDetails_a3de86a1bca9eec7d34351423d399c695}{int {\bfseries k}}\label{classDetails_a3de86a1bca9eec7d34351423d399c695}
 
 \item 
-\hypertarget{classRollNoDetails_a269aeef5b1c437d9f6013d5a76c26186}{\hyperlink{classInputFieldNames}{Input\-Field\-Names} {\bfseries field\-Name}}\label{classRollNoDetails_a269aeef5b1c437d9f6013d5a76c26186}
+\hypertarget{classDetails_a0ca8dcd9715950526d69727b1ba2b553}{stringstream {\bfseries ss}}\label{classDetails_a0ca8dcd9715950526d69727b1ba2b553}
 
 \item 
-\hypertarget{classRollNoDetails_aa91e1fe3aea1075074eced641c761615}{\hyperlink{classReadInputFields}{Read\-Input\-Fields} {\bfseries read\-Field}}\label{classRollNoDetails_aa91e1fe3aea1075074eced641c761615}
+\hypertarget{classDetails_a59491407c5b176454b9c0fc9b7abc6b8}{string {\bfseries temp}}\label{classDetails_a59491407c5b176454b9c0fc9b7abc6b8}
 
 \item 
 string \hyperlink{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}{project\-Name}
@@ -153,45 +150,41 @@ string \hyperlink{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{start\-H1}
 \subsection{Detailed Description}
 
 
- \subsubsection*{Include required header files}
+ \subsubsection*{Include local header files}
 
 
 
- Class\-: \hyperlink{classRollNoDetails}{Roll\-No\-Details} \subsection*{Description\-: \hyperlink{classRollNoDetails}{Roll\-No\-Details} class for }
+ Class\-: \hyperlink{classDetails}{Details} Description\-: Include common variables, functions that are used by \subsection*{derived classes}
 
-Definition at line 35 of file rollnodetails.\-h.
+Definition at line 37 of file details.\-h.
 
 
 
 \subsection{Constructor \& Destructor Documentation}
-\hypertarget{classRollNoDetails_aef927fa87d8ab659f6a241290936980c}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Roll\-No\-Details@{Roll\-No\-Details}}
-\index{Roll\-No\-Details@{Roll\-No\-Details}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Roll\-No\-Details}]{\setlength{\rightskip}{0pt plus 5cm}Roll\-No\-Details\-::\-Roll\-No\-Details (
+\hypertarget{classDetails_a12ecc831d85f2e09538ff6ebf639277d}{\index{Details@{Details}!Details@{Details}}
+\index{Details@{Details}!Details@{Details}}
+\subsubsection[{Details}]{\setlength{\rightskip}{0pt plus 5cm}Details\-::\-Details (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
-)}}\label{classRollNoDetails_aef927fa87d8ab659f6a241290936980c}
+)}}\label{classDetails_a12ecc831d85f2e09538ff6ebf639277d}
 
 
-Constructor. 
+ \subsubsection*{Include \hyperlink{details_8h_source}{details.\-h} file}
 
-
-
- \subsubsection*{Include \hyperlink{rollnodetails_8h_source}{rollnodetails.\-h} for \hyperlink{classRollNoDetails}{Roll\-No\-Details} class declaration}
-
-\subsubsection*{Definition of functions \hyperlink{classRollNoDetails}{Roll\-No\-Details} Class}
+\subsubsection*{Definition of member functions}
 
 
 
- Class\-: \hyperlink{classRollNoDetails}{Roll\-No\-Details} Method\-: \hyperlink{classRollNoDetails}{Roll\-No\-Details} \-:\-: \hyperlink{classRollNoDetails_aef927fa87d8ab659f6a241290936980c}{Roll\-No\-Details()} \subsubsection*{Description\-: Constructor}
+ Class\-: \hyperlink{classDetails}{Details} Method\-: \hyperlink{classDetails}{Details} \-:\-: \hyperlink{classDetails_a12ecc831d85f2e09538ff6ebf639277d}{Details()} \subsubsection*{Description\-: Constructor}
 
-Definition at line 37 of file rollnodetails.\-cc.
+Definition at line 37 of file details.\-cc.
 
 
 
 \subsection{Member Function Documentation}
-\hypertarget{classHTMLTags_a7cae36bd3a0e6f35e89494e5cda64971}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Body\-End@{Body\-End}}
-\index{Body\-End@{Body\-End}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_a7cae36bd3a0e6f35e89494e5cda64971}{\index{Details@{Details}!Body\-End@{Body\-End}}
+\index{Body\-End@{Body\-End}!Details@{Details}}
 \subsubsection[{Body\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Body\-End (
 \begin{DoxyParamCaption}
 {}
@@ -207,8 +200,8 @@ Display $<$/\-B\-O\-D\-Y$>$
 
 Definition at line 180 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_af1fb7b90b9ebb83177da18aba1ef86a9}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Body\-Start@{Body\-Start}}
-\index{Body\-Start@{Body\-Start}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_af1fb7b90b9ebb83177da18aba1ef86a9}{\index{Details@{Details}!Body\-Start@{Body\-Start}}
+\index{Body\-Start@{Body\-Start}!Details@{Details}}
 \subsubsection[{Body\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Body\-Start (
 \begin{DoxyParamCaption}
 {}
@@ -224,8 +217,8 @@ Display $<$\-B\-O\-D\-Y$>$
 
 Definition at line 166 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_ab6dbb027d808e7b708a4ece7e911ceee}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Button@{Button}}
-\index{Button@{Button}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_ab6dbb027d808e7b708a4ece7e911ceee}{\index{Details@{Details}!Button@{Button}}
+\index{Button@{Button}!Details@{Details}}
 \subsubsection[{Button}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Button (
 \begin{DoxyParamCaption}
 \item[{string}]{id, }
@@ -244,8 +237,8 @@ Button.
 
 Definition at line 353 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}{\index{Roll\-No\-Details@{Roll\-No\-Details}!C\-S\-S@{C\-S\-S}}
-\index{C\-S\-S@{C\-S\-S}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}{\index{Details@{Details}!C\-S\-S@{C\-S\-S}}
+\index{C\-S\-S@{C\-S\-S}!Details@{Details}}
 \subsubsection[{C\-S\-S}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-C\-S\-S (
 \begin{DoxyParamCaption}
 \item[{string}]{href}
@@ -261,8 +254,8 @@ Add External C\-S\-S.
 
 Definition at line 138 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_aa82b2d3d85b3afd29e5641dbe1ace439}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Div\-End@{Div\-End}}
-\index{Div\-End@{Div\-End}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_aa82b2d3d85b3afd29e5641dbe1ace439}{\index{Details@{Details}!Div\-End@{Div\-End}}
+\index{Div\-End@{Div\-End}!Details@{Details}}
 \subsubsection[{Div\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Div\-End (
 \begin{DoxyParamCaption}
 {}
@@ -278,8 +271,8 @@ End div section.
 
 Definition at line 208 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a897512b202cfd12729e8fa24e67ea4d6}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Div\-Start@{Div\-Start}}
-\index{Div\-Start@{Div\-Start}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_a897512b202cfd12729e8fa24e67ea4d6}{\index{Details@{Details}!Div\-Start@{Div\-Start}}
+\index{Div\-Start@{Div\-Start}!Details@{Details}}
 \subsubsection[{Div\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Div\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{id, }
@@ -296,27 +289,25 @@ Start Div Section.
 
 Definition at line 194 of file htmltags.\-cc.
 
-\hypertarget{classPageLayout_a68aa868a8868b12964f161838b5f814c}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Footer@{Footer}}
-\index{Footer@{Footer}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Footer}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Footer (
+\hypertarget{classDetails_a1247e8124e16032be1aa8eca9fd2832a}{\index{Details@{Details}!Footer@{Footer}}
+\index{Footer@{Footer}!Details@{Details}}
+\subsubsection[{Footer}]{\setlength{\rightskip}{0pt plus 5cm}void Details\-::\-Footer (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classPageLayout_a68aa868a8868b12964f161838b5f814c}
-Footer Section of Page
+)}}\label{classDetails_a1247e8124e16032be1aa8eca9fd2832a}
+
+
+ Class\-: \hyperlink{classDetails}{Details} Method\-: \hyperlink{classDetails}{Details} \-:\-: \hyperlink{classDetails_a1247e8124e16032be1aa8eca9fd2832a}{Footer()} \subsubsection*{Description\-: Common for all pages(end body, html)}
+
+Reimplemented from \hyperlink{classPageLayout_a68aa868a8868b12964f161838b5f814c}{Page\-Layout}.
 
 
 
- Class\-: \hyperlink{classPageLayout}{Page\-Layout} Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_a68aa868a8868b12964f161838b5f814c}{Footer()} \subsubsection*{Description\-: Footer of pages}
+Definition at line 68 of file details.\-cc.
 
-Reimplemented in \hyperlink{classDetails_a1247e8124e16032be1aa8eca9fd2832a}{Details}.
-
-
-
-Definition at line 145 of file pagelayout.\-cc.
-
-\hypertarget{classHTMLTags_ab57baef28db9590ce59d0e2f403a210f}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Form\-End@{Form\-End}}
-\index{Form\-End@{Form\-End}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_ab57baef28db9590ce59d0e2f403a210f}{\index{Details@{Details}!Form\-End@{Form\-End}}
+\index{Form\-End@{Form\-End}!Details@{Details}}
 \subsubsection[{Form\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Form\-End (
 \begin{DoxyParamCaption}
 {}
@@ -332,8 +323,8 @@ End Form.
 
 Definition at line 236 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a1489ccf4629069eca5e550eeb8e8e887}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Form\-Start@{Form\-Start}}
-\index{Form\-Start@{Form\-Start}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_a1489ccf4629069eca5e550eeb8e8e887}{\index{Details@{Details}!Form\-Start@{Form\-Start}}
+\index{Form\-Start@{Form\-Start}!Details@{Details}}
 \subsubsection[{Form\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Form\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{name, }
@@ -351,8 +342,8 @@ Start Form.
 
 Definition at line 222 of file htmltags.\-cc.
 
-\hypertarget{classPageLayout_ae50907d56f0ba7a85f7ccfdeafa45bcc}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Head@{Head}}
-\index{Head@{Head}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classPageLayout_ae50907d56f0ba7a85f7ccfdeafa45bcc}{\index{Details@{Details}!Head@{Head}}
+\index{Head@{Head}!Details@{Details}}
 \subsubsection[{Head}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Head (
 \begin{DoxyParamCaption}
 \item[{string}]{title\-Name}
@@ -368,8 +359,8 @@ Head Section of Page.
 
 Definition at line 105 of file pagelayout.\-cc.
 
-\hypertarget{classHTMLTags_afdc779e46fac16cc79e4f0e87f621254}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Head\-End@{Head\-End}}
-\index{Head\-End@{Head\-End}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_afdc779e46fac16cc79e4f0e87f621254}{\index{Details@{Details}!Head\-End@{Head\-End}}
+\index{Head\-End@{Head\-End}!Details@{Details}}
 \subsubsection[{Head\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Head\-End (
 \begin{DoxyParamCaption}
 {}
@@ -385,8 +376,8 @@ Display $<$/\-H\-E\-A\-D$>$
 
 Definition at line 112 of file htmltags.\-cc.
 
-\hypertarget{classPageLayout_a7726061f0653245f644a05807fa92472}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Header@{Header}}
-\index{Header@{Header}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classPageLayout_a7726061f0653245f644a05807fa92472}{\index{Details@{Details}!Header@{Header}}
+\index{Header@{Header}!Details@{Details}}
 \subsubsection[{Header}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Header (
 \begin{DoxyParamCaption}
 {}
@@ -400,8 +391,21 @@ Header Section of Page
 
 Definition at line 88 of file pagelayout.\-cc.
 
-\hypertarget{classHTMLTags_af2b01cc08884af52e0b291d07035062e}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Head\-Start@{Head\-Start}}
-\index{Head\-Start@{Head\-Start}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classDetails_a8e68d891bafeb807bdc9c6a4178c3fde}{\index{Details@{Details}!Header@{Header}}
+\index{Header@{Header}!Details@{Details}}
+\subsubsection[{Header}]{\setlength{\rightskip}{0pt plus 5cm}void Details\-::\-Header (
+\begin{DoxyParamCaption}
+\item[{string}]{title\-Name}
+\end{DoxyParamCaption}
+)}}\label{classDetails_a8e68d891bafeb807bdc9c6a4178c3fde}
+
+
+ Class\-: \hyperlink{classDetails}{Details} Method\-: \hyperlink{classDetails}{Details} \-:\-: \hyperlink{classDetails_a8e68d891bafeb807bdc9c6a4178c3fde}{Header(string title\-Name)} \subsubsection*{Description\-: common header for all pages(start html, head, body)}
+
+Definition at line 50 of file details.\-cc.
+
+\hypertarget{classHTMLTags_af2b01cc08884af52e0b291d07035062e}{\index{Details@{Details}!Head\-Start@{Head\-Start}}
+\index{Head\-Start@{Head\-Start}!Details@{Details}}
 \subsubsection[{Head\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Head\-Start (
 \begin{DoxyParamCaption}
 {}
@@ -413,8 +417,8 @@ Definition at line 88 of file pagelayout.\-cc.
 
 Definition at line 99 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a6553c3d01ee194a1d157e6341333dee3}{\index{Roll\-No\-Details@{Roll\-No\-Details}!H\-T\-M\-L\-End@{H\-T\-M\-L\-End}}
-\index{H\-T\-M\-L\-End@{H\-T\-M\-L\-End}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_a6553c3d01ee194a1d157e6341333dee3}{\index{Details@{Details}!H\-T\-M\-L\-End@{H\-T\-M\-L\-End}}
+\index{H\-T\-M\-L\-End@{H\-T\-M\-L\-End}!Details@{Details}}
 \subsubsection[{H\-T\-M\-L\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-H\-T\-M\-L\-End (
 \begin{DoxyParamCaption}
 {}
@@ -430,8 +434,8 @@ Display $<$/\-H\-T\-M\-L$>$
 
 Definition at line 86 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a567551cd701d2836d4240b2917b5e13f}{\index{Roll\-No\-Details@{Roll\-No\-Details}!H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}}
-\index{H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_a567551cd701d2836d4240b2917b5e13f}{\index{Details@{Details}!H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}}
+\index{H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}!Details@{Details}}
 \subsubsection[{H\-T\-M\-L\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-H\-T\-M\-L\-Start (
 \begin{DoxyParamCaption}
 {}
@@ -447,8 +451,8 @@ Display $<$\-H\-T\-M\-L$>$
 
 Definition at line 73 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a705aef36f0847c2a5f10a5df8e079ce8}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Input\-Field@{Input\-Field}}
-\index{Input\-Field@{Input\-Field}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_a705aef36f0847c2a5f10a5df8e079ce8}{\index{Details@{Details}!Input\-Field@{Input\-Field}}
+\index{Input\-Field@{Input\-Field}!Details@{Details}}
 \subsubsection[{Input\-Field}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Input\-Field (
 \begin{DoxyParamCaption}
 \item[{string}]{type, }
@@ -467,8 +471,8 @@ Input Field.
 
 Definition at line 278 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_aea041d720f12a210615c95350774e6aa}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Javascript@{Javascript}}
-\index{Javascript@{Javascript}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_aea041d720f12a210615c95350774e6aa}{\index{Details@{Details}!Javascript@{Javascript}}
+\index{Javascript@{Javascript}!Details@{Details}}
 \subsubsection[{Javascript}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Javascript (
 \begin{DoxyParamCaption}
 \item[{string}]{src}
@@ -484,8 +488,8 @@ Add Javascript File.
 
 Definition at line 153 of file htmltags.\-cc.
 
-\hypertarget{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Logo@{Logo}}
-\index{Logo@{Logo}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}{\index{Details@{Details}!Logo@{Logo}}
+\index{Logo@{Logo}!Details@{Details}}
 \subsubsection[{Logo}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Logo (
 \begin{DoxyParamCaption}
 \item[{string}]{logo\-Name}
@@ -499,8 +503,8 @@ Logo on Page
 
 Definition at line 73 of file pagelayout.\-cc.
 
-\hypertarget{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Menu@{Menu}}
-\index{Menu@{Menu}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{\index{Details@{Details}!Menu@{Menu}}
+\index{Menu@{Menu}!Details@{Details}}
 \subsubsection[{Menu}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Menu (
 \begin{DoxyParamCaption}
 {}
@@ -514,25 +518,8 @@ List/\-Menu Navigation()
 
 Definition at line 50 of file pagelayout.\-cc.
 
-\hypertarget{classRollNoDetails_a218c683c86ee19788b868a08af6e210f}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Read\-Class\-Details@{Read\-Class\-Details}}
-\index{Read\-Class\-Details@{Read\-Class\-Details}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{Read\-Class\-Details}]{\setlength{\rightskip}{0pt plus 5cm}void Roll\-No\-Details\-::\-Read\-Class\-Details (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)}}\label{classRollNoDetails_a218c683c86ee19788b868a08af6e210f}
-
-
-Reading class details from previous page using cgicc. 
-
-
-
- Class\-: \hyperlink{classRollNoDetails}{Roll\-No\-Details} Method\-: \hyperlink{classRollNoDetails}{Roll\-No\-Details} \-:\-: \hyperlink{classRollNoDetails_a218c683c86ee19788b868a08af6e210f}{Read\-Class\-Details()} \subsubsection*{Description\-: For reading class details from previous page}
-
-Definition at line 50 of file rollnodetails.\-cc.
-
-\hypertarget{classHTMLTags_adde967a90e03f4b5168b9bffd319980b}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Select\-Field\-End@{Select\-Field\-End}}
-\index{Select\-Field\-End@{Select\-Field\-End}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_adde967a90e03f4b5168b9bffd319980b}{\index{Details@{Details}!Select\-Field\-End@{Select\-Field\-End}}
+\index{Select\-Field\-End@{Select\-Field\-End}!Details@{Details}}
 \subsubsection[{Select\-Field\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Field\-End (
 \begin{DoxyParamCaption}
 {}
@@ -548,8 +535,8 @@ End Select Field.
 
 Definition at line 309 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_adb6e7ef0a1320dbf6d4acbe1ea3e418f}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Select\-Field\-Start@{Select\-Field\-Start}}
-\index{Select\-Field\-Start@{Select\-Field\-Start}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_adb6e7ef0a1320dbf6d4acbe1ea3e418f}{\index{Details@{Details}!Select\-Field\-Start@{Select\-Field\-Start}}
+\index{Select\-Field\-Start@{Select\-Field\-Start}!Details@{Details}}
 \subsubsection[{Select\-Field\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Field\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{name}
@@ -565,8 +552,8 @@ Select Field Start.
 
 Definition at line 296 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_ae312980d20e3dea0469fdcb730fb975e}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Select\-Option\-End@{Select\-Option\-End}}
-\index{Select\-Option\-End@{Select\-Option\-End}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_ae312980d20e3dea0469fdcb730fb975e}{\index{Details@{Details}!Select\-Option\-End@{Select\-Option\-End}}
+\index{Select\-Option\-End@{Select\-Option\-End}!Details@{Details}}
 \subsubsection[{Select\-Option\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Option\-End (
 \begin{DoxyParamCaption}
 {}
@@ -582,8 +569,8 @@ Selct Option End.
 
 Definition at line 339 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a372570979ccc675e0ed752fe272e3cd6}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Select\-Option\-Start@{Select\-Option\-Start}}
-\index{Select\-Option\-Start@{Select\-Option\-Start}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_a372570979ccc675e0ed752fe272e3cd6}{\index{Details@{Details}!Select\-Option\-Start@{Select\-Option\-Start}}
+\index{Select\-Option\-Start@{Select\-Option\-Start}!Details@{Details}}
 \subsubsection[{Select\-Option\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Option\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{value, }
@@ -600,8 +587,8 @@ Select Option Start.
 
 Definition at line 323 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_abe32ec84b6b2940afbc993be2db178e9}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}}
-\index{Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_abe32ec84b6b2940afbc993be2db178e9}{\index{Details@{Details}!Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}}
+\index{Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}!Details@{Details}}
 \subsubsection[{Set\-H\-T\-M\-L\-Variables}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Set\-H\-T\-M\-L\-Variables (
 \begin{DoxyParamCaption}
 {}
@@ -617,8 +604,8 @@ Assingn Values to variables.
 
 Definition at line 48 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a0655d9f70a8c1a61c406280d8fb9df7a}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Table\-End@{Table\-End}}
-\index{Table\-End@{Table\-End}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_a0655d9f70a8c1a61c406280d8fb9df7a}{\index{Details@{Details}!Table\-End@{Table\-End}}
+\index{Table\-End@{Table\-End}!Details@{Details}}
 \subsubsection[{Table\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Table\-End (
 \begin{DoxyParamCaption}
 {}
@@ -634,8 +621,8 @@ End Table.
 
 Definition at line 263 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a9d4bc37c7d615bc1d7f7c738dae48ad3}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Table\-Start@{Table\-Start}}
-\index{Table\-Start@{Table\-Start}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_a9d4bc37c7d615bc1d7f7c738dae48ad3}{\index{Details@{Details}!Table\-Start@{Table\-Start}}
+\index{Table\-Start@{Table\-Start}!Details@{Details}}
 \subsubsection[{Table\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Table\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{id, }
@@ -652,8 +639,8 @@ Start Table.
 
 Definition at line 249 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a5128d6f1c6be5ac1689047fc9d0d159f}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Title@{Title}}
-\index{Title@{Title}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_a5128d6f1c6be5ac1689047fc9d0d159f}{\index{Details@{Details}!Title@{Title}}
+\index{Title@{Title}!Details@{Details}}
 \subsubsection[{Title}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Title (
 \begin{DoxyParamCaption}
 \item[{string}]{page\-Title}
@@ -672,26 +659,22 @@ Definition at line 125 of file htmltags.\-cc.
 
 
 \subsection{Member Data Documentation}
-\hypertarget{classRollNoDetails_a2126e353865b8e215513fe17785ef230}{\index{Roll\-No\-Details@{Roll\-No\-Details}!prefix@{prefix}}
-\index{prefix@{prefix}!RollNoDetails@{Roll\-No\-Details}}
-\subsubsection[{prefix}]{\setlength{\rightskip}{0pt plus 5cm}string Roll\-No\-Details\-::prefix\mbox{[}M\-I\-N\-\_\-\-S\-I\-Z\-E\mbox{]}\hspace{0.3cm}{\ttfamily [protected]}}}\label{classRollNoDetails_a2126e353865b8e215513fe17785ef230}
+\hypertarget{classDetails_ae3bcb91c433e3c4b1a6c535670d23594}{\index{Details@{Details}!field\-Name@{field\-Name}}
+\index{field\-Name@{field\-Name}!Details@{Details}}
+\subsubsection[{field\-Name}]{\setlength{\rightskip}{0pt plus 5cm}{\bf Input\-Field\-Names} Details\-::field\-Name\hspace{0.3cm}{\ttfamily [protected]}}}\label{classDetails_ae3bcb91c433e3c4b1a6c535670d23594}
+Objects of \hyperlink{classInputFieldNames}{Input\-Field\-Names} and Read\-Fields\-Value class 
 
+Definition at line 44 of file details.\-h.
 
-for storing values of class details 
-
-
-
-Definition at line 39 of file rollnodetails.\-h.
-
-\hypertarget{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}{\index{Roll\-No\-Details@{Roll\-No\-Details}!project\-Name@{project\-Name}}
-\index{project\-Name@{project\-Name}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}{\index{Details@{Details}!project\-Name@{project\-Name}}
+\index{project\-Name@{project\-Name}!Details@{Details}}
 \subsubsection[{project\-Name}]{\setlength{\rightskip}{0pt plus 5cm}string Page\-Layout\-::project\-Name\hspace{0.3cm}{\ttfamily [protected]}, {\ttfamily [inherited]}}}\label{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}
 Project Name = Ba\-Ka\-Plan 
 
 Definition at line 37 of file pagelayout.\-h.
 
-\hypertarget{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{\index{Roll\-No\-Details@{Roll\-No\-Details}!start\-H1@{start\-H1}}
-\index{start\-H1@{start\-H1}!RollNoDetails@{Roll\-No\-Details}}
+\hypertarget{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{\index{Details@{Details}!start\-H1@{start\-H1}}
+\index{start\-H1@{start\-H1}!Details@{Details}}
 \subsubsection[{start\-H1}]{\setlength{\rightskip}{0pt plus 5cm}string H\-T\-M\-L\-Tags\-::start\-H1\hspace{0.3cm}{\ttfamily [protected]}, {\ttfamily [inherited]}}}\label{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}
 
 
@@ -709,5 +692,5 @@ Definition at line 36 of file htmltags.\-h.
 
 The documentation for this class was generated from the following files\-:\begin{DoxyCompactItemize}
 \item 
-src/rollnodetails.\-h\item 
-src/rollnodetails.\-cc\end{DoxyCompactItemize}
+src/details.\-h\item 
+src/details.\-cc\end{DoxyCompactItemize}
