--- a/Documentation/latex/classInputFieldNames.tex
+++ b/Documentation/latex/classInputFieldNames.tex
@@ -101,7 +101,7 @@ Definition at line 52 of file inputfieldnames.\-cc.
 
 Field Names. 
 
-Class Details Value /$\ast$ Field Name $\ast$/ 
+Class \hyperlink{classDetails}{Details} Value /$\ast$ Field Name $\ast$/ 
 
 Definition at line 41 of file inputfieldnames.\-h.
 
