--- a/Documentation/latex/classPageLayout.tex
+++ b/Documentation/latex/classPageLayout.tex
@@ -8,7 +8,7 @@
 Inheritance diagram for Page\-Layout\-:\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=3.000000cm]{classPageLayout}
+\includegraphics[height=4.000000cm]{classPageLayout}
 \end{center}
 \end{figure}
 \subsection*{Public Member Functions}
@@ -282,7 +282,7 @@ Footer Section of Page
 
  Class\-: \hyperlink{classPageLayout}{Page\-Layout} Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_a68aa868a8868b12964f161838b5f814c}{Footer()} \subsubsection*{Description\-: Footer of pages}
 
-Reimplemented in \hyperlink{classClassDetails_a8e80a53e9b6597171c6d8b1976dc33f9}{Class\-Details}.
+Reimplemented in \hyperlink{classDetails_a1247e8124e16032be1aa8eca9fd2832a}{Details}.
 
 
 
@@ -370,10 +370,6 @@ Header Section of Page
 
 
  Class\-: \hyperlink{classPageLayout}{Page\-Layout} Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_a7726061f0653245f644a05807fa92472}{Header()} \subsubsection*{Description\-: Call Menu Function}
-
-Reimplemented in \hyperlink{classClassDetails_a4a0b14f8c5ca7f845d64854a0d81e1ec}{Class\-Details}.
-
-
 
 Definition at line 88 of file pagelayout.\-cc.
 
@@ -652,7 +648,7 @@ H\-T\-M\-L Tag Variables for
 
 
 
-Definition at line 38 of file htmltags.\-h.
+Definition at line 36 of file htmltags.\-h.
 
 
 
