--- a/Documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
+++ b/Documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
@@ -12,11 +12,13 @@ file {\bfseries classdetails.\-h}
 \item 
 file {\bfseries classinfo-\/main.\-cpp}
 \item 
-file {\bfseries commondetails.\-h}
-\item 
 file {\bfseries constants.\-h}
 \item 
 file {\bfseries database.\-h}
+\item 
+file {\bfseries details.\-cc}
+\item 
+file {\bfseries details.\-h}
 \item 
 file {\bfseries filenames.\-h}
 \item 
