--- a/Documentation/latex/hierarchy.tex
+++ b/Documentation/latex/hierarchy.tex
@@ -4,7 +4,10 @@ This inheritance list is sorted roughly, but not completely, alphabetically\-:\b
 \begin{DoxyCompactList}
 \item \contentsline{section}{Page\-Layout}{\pageref{classPageLayout}}{}
 \begin{DoxyCompactList}
+\item \contentsline{section}{Details}{\pageref{classDetails}}{}
+\begin{DoxyCompactList}
 \item \contentsline{section}{Class\-Details}{\pageref{classClassDetails}}{}
+\end{DoxyCompactList}
 \item \contentsline{section}{Roll\-No\-Details}{\pageref{classRollNoDetails}}{}
 \end{DoxyCompactList}
 \end{DoxyCompactList}
